PMM-15460 Remove min-bullseye-* agents from PMM master as Debian 11 is EOL.