@@ -31,7 +31,6 @@ imageMap['us-east-2a.min-alma-10-x64']    = 'ami-070f0d38c534f0fd8'             
 imageMap['us-east-2a.min-jammy-x64']      = 'ami-0503ed50b531cc445'                 // ubuntu 22
 imageMap['us-east-2a.min-noble-x64']      = 'ami-06e3c045d79fd65d9'                 // ubuntu 24
 imageMap['us-east-2a.min-resolute-x64']   = 'ami-0fe18bc3cfa53a248'                 // ubuntu 26.04
-imageMap['us-east-2a.min-bullseye-x64']   = 'ami-08a1f358f8d29bbf5'                 // debian 11
 imageMap['us-east-2a.min-bookworm-x64']   = 'ami-08c109c5ec1e367c3'                 // debian 12
 imageMap['us-east-2a.min-trixie-x64']     = 'ami-054f4f14d58fb695c'                 // debian 13
 
@@ -43,7 +42,6 @@ imageMap['us-east-2b.min-alma-10-x64']    = imageMap['us-east-2a.min-alma-10-x64
 imageMap['us-east-2b.min-jammy-x64']      = imageMap['us-east-2a.min-jammy-x64']
 imageMap['us-east-2b.min-noble-x64']      = imageMap['us-east-2a.min-noble-x64']
 imageMap['us-east-2b.min-resolute-x64']   = imageMap['us-east-2a.min-resolute-x64']
-imageMap['us-east-2b.min-bullseye-x64']   = imageMap['us-east-2a.min-bullseye-x64']
 imageMap['us-east-2b.min-bookworm-x64']   = imageMap['us-east-2a.min-bookworm-x64']
 imageMap['us-east-2b.min-trixie-x64']     = imageMap['us-east-2a.min-trixie-x64']
 
@@ -55,7 +53,6 @@ imageMap['us-east-2c.min-alma-10-x64']    = imageMap['us-east-2a.min-alma-10-x64
 imageMap['us-east-2c.min-jammy-x64']      = imageMap['us-east-2a.min-jammy-x64']
 imageMap['us-east-2c.min-noble-x64']      = imageMap['us-east-2a.min-noble-x64']
 imageMap['us-east-2c.min-resolute-x64']   = imageMap['us-east-2a.min-resolute-x64']
-imageMap['us-east-2c.min-bullseye-x64']   = imageMap['us-east-2a.min-bullseye-x64']
 imageMap['us-east-2c.min-bookworm-x64']   = imageMap['us-east-2a.min-bookworm-x64']
 imageMap['us-east-2c.min-trixie-x64']     = imageMap['us-east-2a.min-trixie-x64']
 
@@ -66,7 +63,6 @@ imageMap['us-east-2a.min-alma-10-arm64']    = 'ami-0cb638175de2a2ff6'           
 imageMap['us-east-2a.min-jammy-arm64']      = 'ami-0f3bb1aab2e14631f'               // ubuntu 22.04 arm64
 imageMap['us-east-2a.min-noble-arm64']      = 'ami-01da1dbf9ea3a6ee6'               // ubuntu 24.04 arm64
 imageMap['us-east-2a.min-resolute-arm64']   = 'ami-005e7d5b13cc4b72b'               // ubuntu 26.04 arm64
-imageMap['us-east-2a.min-bullseye-arm64']   = 'ami-0f11ce0dbafaddcbd'               // debian 11 arm64
 imageMap['us-east-2a.min-bookworm-arm64']   = 'ami-03566da4c3469bbcc'               // debian 12 arm64
 imageMap['us-east-2a.min-trixie-arm64']     = 'ami-0a3db80382cdee233'               // debian 13 arm64
 
@@ -76,7 +72,6 @@ imageMap['us-east-2b.min-alma-10-arm64']    = imageMap['us-east-2a.min-alma-10-a
 imageMap['us-east-2b.min-jammy-arm64']      = imageMap['us-east-2a.min-jammy-arm64']
 imageMap['us-east-2b.min-noble-arm64']      = imageMap['us-east-2a.min-noble-arm64']
 imageMap['us-east-2b.min-resolute-arm64']   = imageMap['us-east-2a.min-resolute-arm64']
-imageMap['us-east-2b.min-bullseye-arm64']   = imageMap['us-east-2a.min-bullseye-arm64']
 imageMap['us-east-2b.min-bookworm-arm64']   = imageMap['us-east-2a.min-bookworm-arm64']
 imageMap['us-east-2b.min-trixie-arm64']     = imageMap['us-east-2a.min-trixie-arm64']
 
@@ -86,7 +81,6 @@ imageMap['us-east-2c.min-alma-10-arm64']    = imageMap['us-east-2a.min-alma-10-a
 imageMap['us-east-2c.min-jammy-arm64']      = imageMap['us-east-2a.min-jammy-arm64']
 imageMap['us-east-2c.min-noble-arm64']      = imageMap['us-east-2a.min-noble-arm64']
 imageMap['us-east-2c.min-resolute-arm64']   = imageMap['us-east-2a.min-resolute-arm64']
-imageMap['us-east-2c.min-bullseye-arm64']   = imageMap['us-east-2a.min-bullseye-arm64']
 imageMap['us-east-2c.min-bookworm-arm64']   = imageMap['us-east-2a.min-bookworm-arm64']
 imageMap['us-east-2c.min-trixie-arm64']     = imageMap['us-east-2a.min-trixie-arm64']
 
@@ -109,7 +103,6 @@ userMap['min-alma-10-x64']     = 'ec2-user'
 userMap['min-jammy-x64']       = 'ubuntu'
 userMap['min-noble-x64']       = 'ubuntu'
 userMap['min-resolute-x64']    = 'ubuntu'
-userMap['min-bullseye-x64']    = 'admin'
 userMap['min-bookworm-x64']    = 'admin'
 userMap['min-trixie-x64']      = 'admin'
 
@@ -119,7 +112,6 @@ userMap['min-alma-10-arm64']   = 'ec2-user'
 userMap['min-jammy-arm64']     = 'ubuntu'
 userMap['min-noble-arm64']     = 'ubuntu'
 userMap['min-resolute-arm64']  = 'ubuntu'
-userMap['min-bullseye-arm64']  = 'admin'
 userMap['min-bookworm-arm64']  = 'admin'
 userMap['min-trixie-arm64']    = 'admin'
 
@@ -187,11 +179,6 @@ initMap['debMap'] = '''
 
     DEB_VERSION=$(lsb_release -sc)
 
-    # Remove bullseye-backports entries from sources.list
-    if [[ ${DEB_VERSION} == "bullseye" ]]; then
-        sudo sed -i '/bullseye-backports/d' /etc/apt/sources.list
-    fi
-
     until sudo apt-get update; do
         sleep 1
         echo try again
@@ -208,7 +195,7 @@ initMap['debMap'] = '''
         JDK_PACKAGE="openjdk-17-jre-headless"
     fi
 
-    if [ "${DEB_VERSION}" = "bookworm" ] || [ "${DEB_VERSION}" = "bullseye" ] || [ "${DEB_VERSION}" = "trixie" ] || [ "${DEB_VERSION}" = "noble" ] || [ "${DEB_VERSION}" = "resolute" ]; then
+    if [ "${DEB_VERSION}" = "bookworm" ] || [ "${DEB_VERSION}" = "trixie" ] || [ "${DEB_VERSION}" = "noble" ] || [ "${DEB_VERSION}" = "resolute" ]; then
         sudo DEBIAN_FRONTEND=noninteractive apt-get -y install ${JDK_PACKAGE} git
         sudo mv /etc/ssl /etc/ssl_old
         sudo DEBIAN_FRONTEND=noninteractive apt-get -y install ${JDK_PACKAGE}
@@ -230,7 +217,6 @@ initMap['min-alma-10-x64']    = initMap['rpmMap']
 initMap['min-jammy-x64']      = initMap['debMap']
 initMap['min-noble-x64']      = initMap['debMap']
 initMap['min-resolute-x64']   = initMap['debMap']
-initMap['min-bullseye-x64']   = initMap['debMap']
 initMap['min-bookworm-x64']   = initMap['debMap']
 initMap['min-trixie-x64']     = initMap['debMap']
 
@@ -240,7 +226,6 @@ initMap['min-alma-10-arm64']  = initMap['rpmMap']
 initMap['min-jammy-arm64']    = initMap['debMap']
 initMap['min-noble-arm64']    = initMap['debMap']
 initMap['min-resolute-arm64'] = initMap['debMap']
-initMap['min-bullseye-arm64'] = initMap['debMap']
 initMap['min-bookworm-arm64'] = initMap['debMap']
 initMap['min-trixie-arm64']   = initMap['debMap']
 
@@ -268,7 +253,6 @@ typeMap['min-alma-10-x64']    = typeMap['min-rhel-8-x64']
 typeMap['min-jammy-x64']      = typeMap['min-rhel-8-x64']
 typeMap['min-noble-x64']      = typeMap['min-rhel-8-x64']
 typeMap['min-resolute-x64']   = typeMap['min-rhel-8-x64']
-typeMap['min-bullseye-x64']   = typeMap['min-rhel-8-x64']
 typeMap['min-bookworm-x64']   = typeMap['min-rhel-8-x64']
 typeMap['min-trixie-x64']     = typeMap['min-rhel-8-x64']
 
@@ -278,7 +262,6 @@ typeMap['min-alma-10-arm64']  = typeMap['min-ol-8-arm64']
 typeMap['min-jammy-arm64']    = typeMap['min-ol-8-arm64']
 typeMap['min-noble-arm64']    = typeMap['min-ol-8-arm64']
 typeMap['min-resolute-arm64'] = typeMap['min-ol-8-arm64']
-typeMap['min-bullseye-arm64'] = typeMap['min-ol-8-arm64']
 typeMap['min-bookworm-arm64'] = typeMap['min-ol-8-arm64']
 typeMap['min-trixie-arm64']   = typeMap['min-ol-8-arm64']
 
@@ -291,7 +274,6 @@ execMap['min-alma-10-x64']    = '1'
 execMap['min-jammy-x64']      = '1'
 execMap['min-noble-x64']      = '1'
 execMap['min-resolute-x64']   = '1'
-execMap['min-bullseye-x64']   = '1'
 execMap['min-bookworm-x64']   = '1'
 execMap['min-trixie-x64']     = '1'
 
@@ -301,7 +283,6 @@ execMap['min-alma-10-arm64']  = '1'
 execMap['min-jammy-arm64']    = '1'
 execMap['min-noble-arm64']    = '1'
 execMap['min-resolute-arm64'] = '1'
-execMap['min-bullseye-arm64'] = '1'
 execMap['min-bookworm-arm64'] = '1'
 execMap['min-trixie-arm64']   = '1'
 
@@ -314,7 +295,6 @@ devMap['min-alma-10-x64']    = devMap['min-rhel-8-x64']
 devMap['min-jammy-x64']      = devMap['min-rhel-8-x64']
 devMap['min-noble-x64']      = devMap['min-rhel-8-x64']
 devMap['min-resolute-x64']   = devMap['min-rhel-8-x64']
-devMap['min-bullseye-x64']   = '/dev/xvda=:80:true:gp3,/dev/xvdd=:20:true:gp3'
 devMap['min-bookworm-x64']   = '/dev/xvda=:80:true:gp3,/dev/xvdd=:20:true:gp3'
 devMap['min-trixie-x64']     = '/dev/xvda=:80:true:gp3,/dev/xvdd=:20:true:gp3'
 
@@ -324,7 +304,6 @@ devMap['min-alma-10-arm64']  = devMap['min-rhel-8-x64']
 devMap['min-jammy-arm64']    = devMap['min-rhel-8-x64']
 devMap['min-noble-arm64']    = devMap['min-rhel-8-x64']
 devMap['min-resolute-arm64'] = devMap['min-rhel-8-x64']
-devMap['min-bullseye-arm64'] = '/dev/xvda=:80:true:gp3,/dev/xvdd=:20:true:gp3'
 devMap['min-bookworm-arm64'] = '/dev/xvda=:80:true:gp3,/dev/xvdd=:20:true:gp3'
 devMap['min-trixie-arm64']   = '/dev/xvda=:80:true:gp3,/dev/xvdd=:20:true:gp3'
 
@@ -337,7 +316,6 @@ labelMap['min-alma-10-x64']    = 'min-alma-10-x64'
 labelMap['min-jammy-x64']      = 'min-jammy-x64'
 labelMap['min-noble-x64']      = 'min-noble-x64'
 labelMap['min-resolute-x64']   = 'min-resolute-x64'
-labelMap['min-bullseye-x64']   = 'min-bullseye-x64'
 labelMap['min-bookworm-x64']   = 'min-bookworm-x64'
 labelMap['min-trixie-x64']     = 'min-trixie-x64'
 
@@ -347,7 +325,6 @@ labelMap['min-alma-10-arm64']  = 'min-alma-10-arm64'
 labelMap['min-jammy-arm64']    = 'min-jammy-arm64'
 labelMap['min-noble-arm64']    = 'min-noble-arm64'
 labelMap['min-resolute-arm64'] = 'min-resolute-arm64'
-labelMap['min-bullseye-arm64'] = 'min-bullseye-arm64'
 labelMap['min-bookworm-arm64'] = 'min-bookworm-arm64'
 labelMap['min-trixie-arm64']   = 'min-trixie-arm64'
 
@@ -360,7 +337,6 @@ jvmoptsMap['min-alma-10-x64']    = jvmoptsMap['min-rhel-8-x64']
 jvmoptsMap['min-jammy-x64']      = jvmoptsMap['min-rhel-8-x64']
 jvmoptsMap['min-noble-x64']      = jvmoptsMap['min-rhel-8-x64']
 jvmoptsMap['min-resolute-x64']   = jvmoptsMap['min-rhel-8-x64']
-jvmoptsMap['min-bullseye-x64']   = '-Xmx512m -Xms512m --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED'
 jvmoptsMap['min-bookworm-x64']   = '-Xmx512m -Xms512m --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED'
 jvmoptsMap['min-trixie-x64']     = '-Xmx512m -Xms512m --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED'
 
@@ -370,7 +346,6 @@ jvmoptsMap['min-alma-10-arm64']  = jvmoptsMap['min-rhel-8-x64']
 jvmoptsMap['min-jammy-arm64']    = jvmoptsMap['min-rhel-8-x64']
 jvmoptsMap['min-noble-arm64']    = jvmoptsMap['min-rhel-8-x64']
 jvmoptsMap['min-resolute-arm64'] = jvmoptsMap['min-rhel-8-x64']
-jvmoptsMap['min-bullseye-arm64'] = '-Xmx512m -Xms512m --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED'
 jvmoptsMap['min-bookworm-arm64'] = '-Xmx512m -Xms512m --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED'
 jvmoptsMap['min-trixie-arm64']   = '-Xmx512m -Xms512m --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED'
 
@@ -468,9 +443,6 @@ String region = 'us-east-2'
             getTemplate('min-resolute-x64',    "${region}${it}"),
             getTemplate('min-resolute-x64',    "${region}${it}", 'm6a.large'), // PMM-15066 fallback
             getTemplate('min-resolute-x64',    "${region}${it}", 'm7i.large'), // PMM-15066 fallback
-            getTemplate('min-bullseye-x64',    "${region}${it}"),
-            getTemplate('min-bullseye-x64',    "${region}${it}", 'm6a.large'), // PMM-15066 fallback
-            getTemplate('min-bullseye-x64',    "${region}${it}", 'm7i.large'), // PMM-15066 fallback
             getTemplate('min-bookworm-x64',    "${region}${it}"),
             getTemplate('min-bookworm-x64',    "${region}${it}", 'm6a.large'), // PMM-15066 fallback
             getTemplate('min-bookworm-x64',    "${region}${it}", 'm7i.large'), // PMM-15066 fallback
@@ -483,7 +455,6 @@ String region = 'us-east-2'
             getTemplate('min-jammy-arm64',     "${region}${it}"),
             getTemplate('min-noble-arm64',     "${region}${it}"),
             getTemplate('min-resolute-arm64',  "${region}${it}"),
-            getTemplate('min-bullseye-arm64',  "${region}${it}"),
             getTemplate('min-bookworm-arm64',  "${region}${it}"),
             getTemplate('min-trixie-arm64',    "${region}${it}"),
             // PMM-15197: on-demand variants for RC/release testing. null spotConfig => on-demand; '-ondemand' label suffix; cap 8.
@@ -494,7 +465,6 @@ String region = 'us-east-2'
             getTemplate('min-jammy-x64',       "${region}${it}", null, true),
             getTemplate('min-noble-x64',       "${region}${it}", null, true),
             getTemplate('min-resolute-x64',    "${region}${it}", null, true),
-            getTemplate('min-bullseye-x64',    "${region}${it}", null, true),
             getTemplate('min-bookworm-x64',    "${region}${it}", null, true),
             getTemplate('min-trixie-x64',      "${region}${it}", null, true),
             getTemplate('min-ol-8-arm64',      "${region}${it}", null, true),
@@ -503,7 +473,6 @@ String region = 'us-east-2'
             getTemplate('min-jammy-arm64',     "${region}${it}", null, true),
             getTemplate('min-noble-arm64',     "${region}${it}", null, true),
             getTemplate('min-resolute-arm64',  "${region}${it}", null, true),
-            getTemplate('min-bullseye-arm64',  "${region}${it}", null, true),
             getTemplate('min-bookworm-arm64',  "${region}${it}", null, true),
             getTemplate('min-trixie-arm64',    "${region}${it}", null, true),
         ],                                       // List<? extends SlaveTemplate> templates
